{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 234,
  "lineage": "d5b130e6-4dae-e946-d59f-d5cbf15f0272",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "week-10-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:200283447265:loadbalancer/app/application-load-balancer/1fc1c3e006e03ba1",
            "arn_suffix": "app/application-load-balancer/1fc1c3e006e03ba1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-load-balancer-1678966583.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:200283447265:loadbalancer/app/application-load-balancer/1fc1c3e006e03ba1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-load-balancer",
            "security_groups": [
              "sg-00f3f5eed3aeb2438"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ddd12a5cc0d1dac"
              },
              {
                "subnet_id": "subnet-0bc30d821d1a6717f"
              }
            ],
            "subnets": [
              "subnet-02ddd12a5cc0d1dac",
              "subnet-0bc30d821d1a6717f"
            ],
            "vpc_id": "vpc-07ad23e9dd3535efe",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_subnet.public-subnet-1",
            "aws_vpc.week-10-vpc",
            "aws_security_group.week-10-sg",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "fp-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:200283447265:listener/app/application-load-balancer/1fc1c3e006e03ba1/16e5fac2aae17442",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:200283447265:targetgroup/ecs-target-group/6ec28fe3b0213b89",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:200283447265:listener/app/application-load-balancer/1fc1c3e006e03ba1/16e5fac2aae17442",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:200283447265:loadbalancer/app/application-load-balancer/1fc1c3e006e03ba1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.week-10-sg",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet-1",
            "aws_vpc.week-10-vpc",
            "aws_alb.week-10-alb",
            "aws_alb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:200283447265:targetgroup/ecs-target-group/6ec28fe3b0213b89",
            "arn_suffix": "targetgroup/ecs-target-group/6ec28fe3b0213b89",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:200283447265:targetgroup/ecs-target-group/6ec28fe3b0213b89",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07ad23e9dd3535efe"
          },
          "dependencies": [
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "week-10-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200283447265:internet-gateway/igw-03d01dfa974213565",
            "id": "igw-03d01dfa974213565",
            "owner_id": "200283447265",
            "vpc_id": "vpc-07ad23e9dd3535efe"
          },
          "dependencies": [
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200283447265:route-table/rtb-002950faf5e81f51d",
            "id": "rtb-002950faf5e81f51d",
            "owner_id": "200283447265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d01dfa974213565",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ad23e9dd3535efe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.week-10-IGW",
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d424ce06d32ba3b",
            "route_table_id": "rtb-002950faf5e81f51d",
            "subnet_id": "subnet-02ddd12a5cc0d1dac"
          },
          "dependencies": [
            "aws_internet_gateway.week-10-IGW",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet",
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c47ce094c106b13a",
            "route_table_id": "rtb-002950faf5e81f51d",
            "subnet_id": "subnet-0bc30d821d1a6717f"
          },
          "dependencies": [
            "aws_internet_gateway.week-10-IGW",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet-1",
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e4f816946e7394c",
            "route_table_id": "rtb-002950faf5e81f51d",
            "subnet_id": "subnet-024b48db3c6740a7e"
          },
          "dependencies": [
            "aws_internet_gateway.week-10-IGW",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet-2",
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200283447265:security-group/sg-0814d23a99795a132",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0814d23a99795a132",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f3f5eed3aeb2438"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20211208084906932000000004",
            "name_prefix": "terraform-",
            "owner_id": "200283447265",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ad23e9dd3535efe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.week-10-sg",
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "week-10-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200283447265:security-group/sg-00f3f5eed3aeb2438",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00f3f5eed3aeb2438",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211208084904837400000001",
            "name_prefix": "terraform-",
            "owner_id": "200283447265",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ad23e9dd3535efe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200283447265:subnet/subnet-02ddd12a5cc0d1dac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02ddd12a5cc0d1dac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200283447265",
            "vpc_id": "vpc-07ad23e9dd3535efe"
          },
          "dependencies": [
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200283447265:subnet/subnet-0bc30d821d1a6717f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0bc30d821d1a6717f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200283447265",
            "vpc_id": "vpc-07ad23e9dd3535efe"
          },
          "dependencies": [
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200283447265:subnet/subnet-024b48db3c6740a7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-024b48db3c6740a7e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "200283447265",
            "vpc_id": "vpc-07ad23e9dd3535efe"
          },
          "dependencies": [
            "aws_vpc.week-10-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "week-10-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:200283447265:vpc/vpc-07ad23e9dd3535efe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef84a72e9f25d9b3",
            "default_route_table_id": "rtb-0eaab5773f01a16f5",
            "default_security_group_id": "sg-018211d550846c7b8",
            "dhcp_options_id": "dopt-0f1cead49479fc7a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07ad23e9dd3535efe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eaab5773f01a16f5",
            "owner_id": "200283447265",
            "tags": {
              "Name": "week-10-vpc"
            },
            "tags_all": {
              "Name": "week-10-vpc"
            }
          }
        }
      ]
    }
  ]
}